# taskfast-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  codecov.yml  deny.toml  pnpm-lock.yaml  release-plz.toml  tsconfig.base.json  typos.toml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump.yml  ci-scheduled.yml  ci.yml  docker.yml  fuzz.yml  mutants.yml  publish-crates.yml  release-plz.yml  release.yml  skill-validate.yml  wiki-sync.yml
client-skills/taskfast-agent/: SKILL.md
client-skills/taskfast-agent/reference/: API.md  BOOT.md  POSTER.md  SETUP.md  TROUBLESHOOTING.md  WORKER.md
crates/taskfast-agent/: CONTEXT.md  Cargo.toml
crates/taskfast-agent/src/: bootstrap.rs  chain.rs  events.rs  faucet.rs  keystore.rs  lib.rs  poster.rs  retry.rs  signing.rs  tempo_rpc.rs  wallet.rs  webhooks.rs
crates/taskfast-agent/tests/: bootstrap.rs  events.rs  poster.rs  wallet.rs  webhooks.rs
crates/taskfast-chains/: CONTEXT.md  Cargo.toml
crates/taskfast-chains/src/: any.rs  avalanche.rs  chain.rs  lib.rs  near.rs  polygon.rs  solana.rs  stellar.rs
crates/taskfast-chains/src/tempo/: mod.rs
crates/taskfast-chains/tests/: feature_compile.rs  tempo_parity.rs
crates/taskfast-cli/: Cargo.toml
crates/taskfast-cli/examples/: escrow_probe.rs
crates/taskfast-cli/skills/taskfast-agent/: SKILL.md
crates/taskfast-cli/skills/taskfast-agent/reference/: TROUBLESHOOTING.md  WORKER.md
crates/taskfast-cli/src/: config.rs  dotenv.rs  envelope.rs  exit.rs  lib.rs  main.rs  trace.rs  wallet_lock.rs
crates/taskfast-cli/src/cmd/: agent.rs  artifact.rs  backer.rs  bid.rs  bond.rs  cast.rs  config.rs  discover.rs  dispute.rs  escrow.rs  events.rs  init.rs  init_tui.rs  me.rs  message.rs  mod.rs  payment.rs  ping.rs  platform.rs  post.rs  review.rs  settle.rs  skills.rs  stake.rs  task.rs  wallet.rs  wallet_args.rs  webhook.rs
crates/taskfast-cli/src/cmd/events/: ack.rs  mod.rs  poll.rs  schema.rs  stream.rs
crates/taskfast-cli/tests/: artifact.rs  backer.rs  bid.rs  bond.rs  cast.rs  config.rs  discover.rs  escrow.rs  events.rs  init.rs  init_tui.rs  me.rs  message.rs  ping.rs  post.rs  review.rs  settle.rs  simple_wrappers.rs  stake.rs  task.rs  trace.rs  webhook.rs
crates/taskfast-client/: Cargo.toml  build.rs
crates/taskfast-client/spec/: openapi.yaml
crates/taskfast-client/src/: client.rs  corr.rs  errors.rs  lib.rs  retry.rs
crates/taskfast-client/tests/: auth_and_error_mapping.rs  codegen_smoke.rs  corr_capture.rs
crates/taskfast-codegen/: Cargo.toml
crates/taskfast-codegen/src/: lib.rs
docs/: NETWORK.md
docs/adr/: 0001-chain-trait-identity-only.md
evaluation/skill-taskfast-agent/: results.tsv
evaluation/skill-taskfast-agent/baseline_skill/reference/: POSTER.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/chain_validation/: mainnet_token  unknown_zero
fuzz/corpus/config_parse/: typical.json
fuzz/corpus/response_decode/: network.json  profile.json
fuzz/fuzz_targets/: chain_validation.rs  config_parse.rs  response_decode.rs
scripts/: check-spdx.sh  check-spec-drift.sh  validate-skill.sh  vendor-spec.sh
skills/taskfast-agent/: SKILL.md
skills/taskfast-agent/reference/: POSTER.md  TROUBLESHOOTING.md  WORKER.md
spec/: openapi.provenance.toml  openapi.yaml
wiki/: Agent-Bootstrap.md  Agent-Owner-Setup.md  Agent-Poster-Loop.md  Agent-Skill-Overview.md  Agent-State-Machines.md  Agent-Troubleshooting.md  Agent-Worker-Loop.md  Command-Reference.md  Commands-Bid.md  Commands-Events.md  Commands-Post.md  Commands-Task.md  Commands-Webhook.md  Contributing.md  Home.md  Installation.md  Network-Configuration.md  Quickstart.md  Release-Process.md  _Footer.md  _Sidebar.md
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
