[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Repo automation binary: `cargo xtask <cmd>`. Spec normalization lives in the published `taskfast-codegen` crate; this crate is the thin CLI wrapper plus repo-specific commands (version bump, etc.)."

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
taskfast-codegen.workspace = true
toml_edit.workspace = true
