[package]
name = "taskfast-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Orchestration library for TaskFast agents: bootstrap, wallet, webhooks, events, signing, keystore."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true }
tracing.workspace = true
futures.workspace = true
taskfast-client = { workspace = true }
