[package]
name = "taskfast-chains"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Chain abstraction for TaskFast SDK: trait Chain + per-chain cargo features (tempo v1; polygon/avalanche/solana/near/stellar architecture stubs)."
publish = false

[lints]
workspace = true

[package.metadata.dist]
dist = false

[features]
default = ["tempo"]
tempo = ["dep:alloy-primitives", "dep:alloy-signer", "dep:alloy-signer-local", "dep:alloy-sol-types", "dep:hex", "dep:thiserror"]
polygon = []
avalanche = []
solana = []
near = []
stellar = []

[dependencies]
alloy-primitives = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
