[package]
name = "taskfast-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "OpenAPI spec normalizer for the TaskFast client codegen pipeline (folds error aliases, strips progenitor-incompatible constructs)."
keywords = ["openapi", "codegen", "taskfast", "progenitor"]
categories = ["development-tools::build-utils"]

[lints]
workspace = true

[package.metadata.dist]
dist = false

[dependencies]
anyhow.workspace = true
serde_yaml.workspace = true
